--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TimeTracker – Überstunden Tracker</title>
-    <div class="subtitle-one"><p>by Eray</p></div>
+    <br class="subtitle-one"><p>by Eray</p></span>
   </head>
   <body>
     <div id="root"></div>
