--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TimeTracker – Überstunden Tracker</title>
-    <div class="subtitle-one"><p>by Eray</p></div>
+    <title>TimeTracker – Erays Überstunden Tracker</title>
   </head>
   <body>
     <div id="root"></div>
